<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="browseViewModel"
            type="com.example.android.browse.ui.viewmodels.BrowseViewModel" />

        <variable
            name="bottomSheetState"
            type="Integer" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/browse_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.BrowseFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/browse_query_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/browse_sort_order_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/browse_query_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={browseViewModel.queryParameters.filterString}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/browse_sort_order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="temporary sort order"
                android:onClick="@{() -> browseViewModel.toggleSortOptionsBottomSheetVisibility()}"
                app:layout_constraintEnd_toEndOf="@id/browse_sort_direction_toggle"
                app:layout_constraintStart_toEndOf="@id/browse_query_text_input_layout"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/browse_search_button"
                android:onClick="@{() -> browseViewModel.search()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/browse_sort_order_button" />

            <ToggleButton
                android:id="@+id/browse_sort_direction_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/browse_sort_order_button"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/browse_search_results_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/browse_search_button"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/lcbo_item_list_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/sort_options_bottom_sheet"
            app:bottomSheetState="@{bottomSheetState}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
